Actualizare CMakelists.txt

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -7,4 +7,4 @@ set(CMAKE_CXX_STANDARD_REQUIRED true)
 
 add_executable(bin main.cpp)
 
-target_link_libraries(bin bgi gdi32 comdlg32 uuid oleaut32 ole32)
+target_link_libraries(bin bgi gdi32 comdlg32 uuid oleaut32 ole32 winmm)
