--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -5,9 +5,8 @@ project(Solitarul)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
 
-include_directories(include)
 
-add_executable(bin main.cpp joc.cpp tabla.cpp)
+add_executable(bin main.cpp)
 
 target_link_libraries(bin bgi gdi32 comdlg32 uuid oleaut32 ole32 winmm)
 
